Add card foiling
