# server/model/card.go
@@ -24,4 +24,7 @@ type Card struct {
 
 	ExpansionID string    `gorm:"not null" json:"expansionId"`
 	Expansion   Expansion `json:"expansion"`
+
+	FoilingID string  `gorm:"" json:"foilingId"`
+	Foiling   Foiling `json:"foiling"`
 }
